Bug 383010 - Visual glitches while scrolling pages with position:fixed elements, patch by Stephen Moehle, r+sr=roc